<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="@dimen/outer_padding"
    tools:context=".MainActivity">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/imageView"
        android:layout_width="@dimen/avatar_size"
        android:layout_height="@dimen/avatar_size"
        android:layout_marginBottom="@dimen/el_dist_far"
        android:src="@drawable/ic_github"
        app:tint="@color/on_background_light" />

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/el_dist_far"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/app_name"
        android:textColor="@color/on_background_light"
        android:textSize="@dimen/font_size_name" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/el_dist_far">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/text_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:hint="username" />

    </com.google.android.material.textfield.TextInputLayout>

    <RadioGroup
        android:id="@+id/radio_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/radio_button_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:fontFamily="sans-serif-condensed"
            android:onClick="onRadioButtonClicked"
            android:text="@string/username"
            android:textColor="@color/on_background_light"
            android:textSize="@dimen/font_size_login"
            app:buttonTint="@color/on_background_dark" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/radio_button_orgname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed"
            android:onClick="onRadioButtonClicked"
            android:text="@string/orgname"
            android:textColor="@color/on_background_light"
            android:textSize="@dimen/font_size_login"
            app:buttonTint="@color/on_background_dark" />
    </RadioGroup>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search_repos" />

</LinearLayout>