<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:gravity="center"
    android:padding="@dimen/outer_padding"
    tools:context=".ReposActivity">

    <ProgressBar
        android:id="@+id/progress_bar"
        style="?android:attr/progressBarStyle"
        android:layout_width="@dimen/avatar_size"
        android:layout_height="@dimen/avatar_size"
        android:layout_marginBottom="@dimen/el_dist_far"
        android:indeterminate="true" />

    <include
        android:id="@+id/error_message"
        layout="@layout/error_message_template"
        android:visibility="gone" />

    <ScrollView
        android:id="@+id/main_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <com.google.android.material.card.MaterialCardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/el_dist_far"
                app:cardCornerRadius="@dimen/corner_radius_circle"
                app:strokeColor="@color/on_background_dark"
                app:strokeWidth="@dimen/stroke_width">

                <ImageView
                    android:id="@+id/avatar"
                    android:layout_width="@dimen/avatar_size"
                    android:layout_height="@dimen/avatar_size"
                    android:scaleType="centerCrop"
                    tools:srcCompat="@tools:sample/avatars" />
            </com.google.android.material.card.MaterialCardView>

            <TextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/el_dist_close"
                android:fontFamily="sans-serif-condensed-medium"
                android:textColor="@color/on_background_light"
                android:textSize="@dimen/font_size_name"
                tools:text="Firstname Surname" />

            <TextView
                android:id="@+id/login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/el_dist_far"
                android:fontFamily="sans-serif-condensed-light"
                android:textColor="@color/on_background_dark"
                android:textSize="@dimen/font_size_login"
                tools:text="username" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/el_dist_far"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/el_dist_close"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/ic_followers"
                    app:tint="@color/on_background_dark" />

                <TextView
                    android:id="@+id/followers"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/el_dist_close"
                    android:layout_weight="1"
                    android:fontFamily="sans-serif-condensed-medium"
                    android:textColor="@color/on_background_light"
                    android:textSize="@dimen/font_size_details"
                    tools:text="155k" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/el_dist_close"
                    android:layout_weight="1"
                    android:fontFamily="sans-serif-condensed-light"
                    android:text="@string/followers"
                    android:textColor="@color/on_background_dark"
                    android:textSize="@dimen/font_size_details" />

                <TextView
                    android:id="@+id/following"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/el_dist_close"
                    android:layout_weight="1"
                    android:fontFamily="sans-serif-condensed-medium"
                    android:textColor="@color/on_background_light"
                    android:textSize="@dimen/font_size_details"
                    tools:text="0" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="sans-serif-condensed-light"
                    android:text="@string/following"
                    android:textColor="@color/on_background_dark"
                    android:textSize="@dimen/font_size_details" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/el_dist_close"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/el_dist_close"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/ic_company"
                    app:tint="@color/on_background_dark" />

                <TextView
                    android:id="@+id/company"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="sans-serif-condensed"
                    android:textColor="@color/on_background_light"
                    android:textSize="@dimen/font_size_details"
                    tools:text="Company Name" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/el_dist_far"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/el_dist_close"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/ic_location"
                    app:tint="@color/on_background_dark" />

                <TextView
                    android:id="@+id/location"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="sans-serif-condensed"
                    android:textColor="@color/on_background_light"
                    android:textSize="@dimen/font_size_details"
                    tools:text="City, State" />
            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/repos_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/el_dist_far"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:itemCount="3" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/el_dist_close"
                    android:fontFamily="sans-serif-condensed"
                    android:text="@string/datasource"
                    android:textColor="@color/on_background_light"
                    android:textSize="@dimen/font_size_details" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-condensed"
                    android:text="@string/github_api"
                    android:textColor="@color/hyperlink"
                    android:textSize="@dimen/font_size_details" />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>